<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="100dp"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/btnReload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:src="@android:drawable/ic_popup_sync"
                android:visibility="visible" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/infoView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/initializing"
                    android:textSize="18sp"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/light_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ToggleButton
                        android:id="@+id/state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textOff="@string/off"
                        android:textOn="@string/on" />

                    <TextView
                        android:id="@+id/color_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="31.36"
                        android:background="#FF00FF00"
                        android:text="\n" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:src="@drawable/bar_hue" />

                    <SeekBar
                        android:id="@+id/bar_hue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:max="360" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/saturation"
                        android:textSize="18sp"
                        android:visibility="visible" />

                    <SeekBar
                        android:id="@+id/bar_sat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:max="1000" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/brightness"
                        android:textSize="18sp"
                        android:visibility="visible" />

                    <SeekBar
                        android:id="@+id/bar_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:max="1000" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="31dp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/bri_over"
                        android:textSize="18sp"
                        android:visibility="visible" />

                    <SeekBar
                        android:id="@+id/bar_bo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:max="100" />

                    <TextView
                        android:id="@+id/text5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/dev_name"
                        android:textSize="18sp"
                        android:visibility="visible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edit_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="text"
                            android:text="Name" />

                        <Button
                            android:id="@+id/set_name"
                            android:layout_width="wrap_content"
                            android:layout_height="37dp"
                            android:text="@string/btn_set" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/text6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/wh_balance"
                        android:textSize="18sp"
                        android:visibility="visible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edit_wbal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="text"
                            android:text="1,1,1" />

                        <Button
                            android:id="@+id/set_wbal"
                            android:layout_width="wrap_content"
                            android:layout_height="37dp"
                            android:text="@string/btn_set" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>
